# SFML-WhiteBoard-with-WebSockets

./: .gitignore  CMakeLists.txt  README.md
src/: conwin.cpp  main.cpp
